# custom_themes

./: README.md  pyproject.toml
custom_themes/: api.py  boot.py  hooks.py  install.py  modules.txt  patches.txt  utils.py
custom_themes/custom_themes/doctype/custom_icon_override/: custom_icon_override.json  custom_icon_override.py
custom_themes/custom_themes/doctype/custom_theme_settings/: custom_theme_settings.js  custom_theme_settings.json  custom_theme_settings.py
custom_themes/custom_themes/doctype/desk_icon_override/: desk_icon_override.json  desk_icon_override.py
custom_themes/public/css/: custom_themes.css
custom_themes/public/js/: custom_themes.js
